--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="logostart">
             <a href="#" class="logo"> <span>ARM</span>FITNESS</a>
             <i class="bi bi-volume-down" id="musicPlay"></i>
-            <i class="bi bi-volume-mute" id="musicPause"></i>
+            
         </div>
         <nav class="navbar">
             <a href="#home">home</a>
@@ -27,7 +27,6 @@
         </nav>
         <div class="iconnavbar">
             <i class="bi bi-moon" id="moon"></i>
-            <i class="bi bi-brightness-high" id="sun"></i>
         </div>
             <div id="menu-btn" class="fas fa-bars"></div>
     </header>
@@ -237,7 +236,7 @@
                 <p> <i class="fas fa-phone"></i> +374-99-99-999 </p>
                 <p> <i class="fas fa-phone"></i> +374-88-88-888 </p>
                 <p> <i class="fas fa-envelope"></i> sbhbnz@gmail.com </p>
-                <p> <i class="fas fa-map"></i> Erevan, Armenia - 400104 </p>
+                <p> <i class="fas fa-map"></i> Erevan, Armenia - 2054484 </p>
                 <div class="share">
                     <a href="#" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
