--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <p> <i class="fas fa-phone"></i> +374-99-99-999 </p>
                 <p> <i class="fas fa-phone"></i> +374-88-88-888 </p>
                 <p> <i class="fas fa-envelope"></i> sbhbnz@gmail.com </p>
-                <p> <i class="fas fa-map"></i> Erevan, Armenia - 2054484 </p>
+                <p> <i class="fas fa-map"></i> Erevan, Armenia - 205448 </p>
                 <div class="share">
                     <a href="#" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
